kube/user-service/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
      - name: user-api
        image: ecomacrdev001.azurecr.io/user-api:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
spec:
  type: ClusterIP
  selector:
    app: user-api
  ports:
  - port: 80
    targetPort: 3000
